# eecs475_dsa

./: DSA.cpp  DSA.h  DSA_WORKS.CPP  Makefile  generate_primes  generate_primes_generator  hash-mykola.cpp  hash.cpp  hash.h  hash_test.cpp  main3_uberzahl  old_main.cpp  test.cpp  uberzahl.cpp  uberzahl.h
Break It/: openZipped.sh
Break It/DSA/DSA/: ReadMe.txt  dsa.cpp  sha256.cpp  sha256.h  uberzahl.cpp
Break It/DSA/cryptoproject/: correctsign.txt  correctverify.txt  cryptodata.xlsx  dsa.cpp  dsa.h  dsatestvec.cpp  main.cpp  readme.txt  signinput.txt  test  uberzahl.cpp  uberzahl.h  verifyinput.txt
Break It/DSA/proj/: Makefile  README  SHA1.cpp  SHA1.h  SignAndVerify.cpp  SignAndVerify.h  keygen.cpp  keygen.h  main.cpp  uberzahl.cpp  uberzahl.h
Break It/El Gamal/: eecs475final.tar
Break It/El Gamal/eecs475final/: proj1.cpp
Break It/El Gamal/group43project4/: elGamal.cpp  performanceChart.docx  readme.txt  sampleOutput.txt
Break It/PRESENT/Archive/: main.cpp  output.txt  output2.txt  output3.txt  output4.txt  output5.txt  uberzahl.cpp  uberzahl.h
Break It/PRESENT/project/: Makefile  present.cpp
Break It/SIMON/: 475project_SimonCipher.tgz
Break It/SIMON/EECS475-Project-simon/: README.txt  sample_outputs_and_performance_chart.txt  simon.cpp
Break It/SPECK/speck/: CMakeLists.txt  README  build.sh  ecb.h  speck.cpp  speck.h  speck_cli.cpp  speck_command.cpp  speck_getopt.h  speck_performance.docx  speck_performance.xlsx  tlspadding.h  unixerror.cpp  unixerror.h  utilities.py
Break It/SPECK/speck/tests/: speck.test.cpp  test-vectors.h
(+182 files in other folders)
